--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_fonts: ^6.2.1
   http: ^1.3.0
   badges: ^3.1.2
+  device_preview_plus: ^2.2.7
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
